fit cut at API giving timestamps
